--- a/index.html
+++ b/index.html
@@ -25,9 +25,44 @@
     <link rel="stylesheet" href="css/pages/index.css">
 
     <!-- Responsive -->
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="responsive.css">
+    <!-- Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+
 </head>
 <body>
+ <!-- navbar -->
+
+
+
+
+<header>
+    <nav>
+        <ul>
+            <li><a ref="#" id="" class=""></a></li>
+            <li><a ref="#" id="" class=""></a></li>
+            <li><a ref="#" id="" class=""></a></li>
+            <li><a ref="#" id="" class=""></a></li>
+        </ul>
+    </nav>
+</header>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
