--- a/testtype.html
+++ b/testtype.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="css/components/forms.css">
 
     <!-- special -->
-    <link rel="stylesheet" href="css/pages/contact.css">
+    <link rel="stylesheet" href="css/pages/testtype.css">
 
     <!-- Responsive -->
     <link rel="stylesheet" href="responsive.css">
