--- a/index.html
+++ b/index.html
@@ -1,126 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bookstore</title>
+    <!-- gsap -->
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.2/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.2/dist/ScrollTrigger.min.js"></script>
     <!-- Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-</head>
-<body>
-    
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- GSAP Core -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js"></script>
-<!-- ScrollTrigger Plugin -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/ScrollTrigger.min.js"></script>
-
-</body>
-</html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    
-<!-- JS Modules -->
-<script src="js/modules/slider.js" defer></script>
-<script src="js/modules/cart.js" defer></script>
-<script src="js/modules/search.js" defer></script>
-<script src="js/modules/account.js" defer></script>
-
-<!-- Main JS -->
-<script src="js/main.js" defer></script>
-
-</body>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
+    <!-- CSS connected -->
+    <link rel="stylesheet" href="jsp/variables.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="jsp/navbar&footer.css" />
+    <link rel="stylesheet" href="jsp/buttons.css" />
+    <link rel="stylesheet" href="style pages/home.css" />
+    <link rel="stylesheet" href="jsp/responsive.css" />
+  </head>
+  <body>
+    <!-- Home -->
+    <section class="home" id="home">
+      <header class="navbar">
+        <nav>
+          <a href="#home">Home</a>
+          <a href="#store">Store</a>
+          <a href="#test">Book Test</a>
+          <a href="#about">About</a>
+          <a href="#contact">Contact</a>
+        </nav>
+      </header>
+      <h1>Welcome Home</h1>
+      <div class="scroll-hint">Scroll Down</div>
+    </section>
+    <!-- Store -->
+    <section class="store" id="store">
+      <div class="horizontal-container">
+        <div class="box">
+          <img
+            src="photo/wallpaper/ea9af7cc-7c9a-40f1-b565-c84212dab42f_removalai_preview.png"
+            alt="وصف الصورة"
+          />
+        </div>
+        <div class="box">About Info 2</div>
+        <div class="box">About Info 3</div>
+        <div class="box">About Info 4</div>
+        <div class="box">About Info 5</div>
+        <div class="box">About Info 6</div>
+        <div class="box">About Info 7</div>
+        <div class="box">About Info 8</div>
+      </div>
+    </section>
+    <!-- Test -->
+    <section class="test" id="test"></section>
+
+    <!-- about -->
+    <section class="about" id="about"></section>
+    <!-- contact -->
+    <section class="contact" id="contact"></section>
+    <!-- JS -->
+    <script src="main.js"></script>
+    <script src="dinamic pages/home.js"></script>
+  </body>
 </html>
