--- a/index.html
+++ b/index.html
@@ -38,12 +38,7 @@
     <!-- Store -->
     <section class="store" id="store">
       <div class="horizontal-container">
-        <div class="box">
-          <img
-            src="photo/wallpaper/ea9af7cc-7c9a-40f1-b565-c84212dab42f_removalai_preview.png"
-            alt="وصف الصورة"
-          />
-        </div>
+        <div class="box">About Info 1</div>
         <div class="box">About Info 2</div>
         <div class="box">About Info 3</div>
         <div class="box">About Info 4</div>
